cmake_minimum_required(VERSION 3.10)
project(StopWait)



SET(CMAKE_C_COMPTLER GCC)
set(CMAKE_CXX FLAGS -fexec-charset=GBK)
add_definitions(-std=c++11)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(SRC ${PROJECT_SOURCE_DIR}/src)
add_definitions("-g")
ADD_EXECUTABLE(stop_wait ${SRC}/StopWait.cpp ${SRC}/StopWaitRdtReceiver.cpp ${SRC}/StopWaitRdtSender.cpp)
ADD_EXECUTABLE(go_back_n ${SRC}/GoBackN.cpp ${SRC}/GoBackNRdtSender.cpp ${SRC}/GoBackNRdtReceiver.cpp )
ADD_EXECUTABLE(sr ${SRC}/SR.cpp ${SRC}/SRRdtSender.cpp ${SRC}/SRRdtReceiver.cpp)
ADD_EXECUTABLE(tcp ${SRC}/TCP.cpp ${SRC}/TCPRdtSender.cpp ${SRC}/TCPRdtReceiver.cpp)
FIND_LIBRARY(NETSIM_LIB libnetsim.a ${PROJECT_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(stop_wait  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(go_back_n ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(sr ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(tcp ${NETSIM_LIB})